<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Examen</string>
    <string name="action_settings">Settings</string>

    <!-- TITLE -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Registration</string>
    <string name="title_activity_application">Home</string>

    <!-- LABELS -->
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="password_confirmation_label">Confirm Password</string>
    <string name="welcome_label">Welcome</string>
    <string name="nombrelista">Nombre de Lista</string>
    <string name="delete">delete</string>

    <!-- BUTTONS -->
    <string name="register_button_label">Register</string>
    <string name="login_button_label">Login</string>
    <string name="logout_button_label">Logout</string>
    <string name="profile_button_label">Profile</string>
    <string name="nameitemlista1">nombre de su lista</string>
    <string name="crear">crear nueva lista</string>
    <string name="welcome">Bienvenido a mi App</string>
    <string name="title_activity_lista_nueva">ListaNueva</string>
    <string name="hello_world">Hello world!</string>
	<string name="atras">Atras</string>
	<string name="crearlista">Crear lista</string>
	
</resources>
