<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/profile_button_label"
        android:onClick="onProfileButtonClicked" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/logout_button_label"
        android:onClick="onLogoutButtonClicked" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/button3" >

    </ListView>

    <TextView
        android:id="@+id/nameTextViewField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/profileButton"
        android:layout_alignBottom="@+id/profileButton"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/profileButton"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoutButton"
        android:layout_centerHorizontal="true"
        android:text="@string/crear" />
    
</RelativeLayout>
